--- a/Pipeline/azure-pipelines.yaml
+++ b/Pipeline/azure-pipelines.yaml
@@ -1,11 +1,11 @@
 stages:
 - stage: Deploy
   pool:
-      name: Default
+      vmImage: 'ubuntu-latest'
   jobs:
       - template: Template/stage-deploy-template.yaml
         parameters:
           resourceGroup: 'VOTING_RG'
-          azureSubscription: 'Azure subscription 1'
-          terraformResourceGroup: '$(TERRAFORM_RG)'
-          terraformStorageAccount: '$(terraformst)'
+          azureSubscription: 'eVotingAzureServiceConnection'
+          terraformResourceGroup: 'TERRAFORM_RG'
+          terraformStorageAccount: 'terraformst'
