--- a/PollingStation/PollingStationApp/appsettings.json
+++ b/PollingStation/PollingStationApp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AzureAd": {
+    "Domain": "x",
+    "TenantId": "x"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
