--- a/PollingStation/PollingStationApp/appsettings.json
+++ b/PollingStation/PollingStationApp/appsettings.json
@@ -1,7 +1,11 @@
 {
   "AzureAd": {
-    "Domain": "x",
-    "TenantId": "x"
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "larisajurjoutlook.onmicrosoft.com",
+    "TenantId": "be425d4e-99ca-4e28-be78-80387b4010f0",
+    "ClientId": "e9728b9e-e644-429e-a604-36e44651ef9b",
+    "ClientSecret": "cvT8Q~suEL8V~-Zb8kmWDnYve_jsIxOniUB9lcpn",
+    "CallbackPath": "/signin-oidc"
   },
   "Logging": {
     "LogLevel": {
