--- a/Voting/VotingFn/VotingFn.csproj
+++ b/Voting/VotingFn/VotingFn.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.16.2" />
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.21.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.SignalRService" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="3.8.4" />
   </ItemGroup>
   <ItemGroup>
 	  <None Update="appsettings.json">
