--- a/PollingStation/PollingStationAPI/PollingStationAPI.csproj
+++ b/PollingStation/PollingStationAPI/PollingStationAPI.csproj
@@ -13,7 +13,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\PollingStationAPI.Service\PollingStationAPI.Service.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+    <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
+  </ItemGroup>
+	<ItemGroup>
+		<None Update="appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 </Project>
