add signalR session storing

--- a/Voting/VotingApp/appsettings.json
+++ b/Voting/VotingApp/appsettings.json
@@ -7,6 +7,9 @@
     "ClientSecret": "cvT8Q~suEL8V~-Zb8kmWDnYve_jsIxOniUB9lcpn",
     "CallbackPath": "/signin-oidc"
   },
+  "ConnectionStrings": {
+    "PollingStationAPI": "http://localhost:5062"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
