--- a/Voting/VotingApp/appsettings.json
+++ b/Voting/VotingApp/appsettings.json
@@ -3,9 +3,10 @@
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "larisajurjoutlook.onmicrosoft.com",
     "TenantId": "be425d4e-99ca-4e28-be78-80387b4010f0",
-    "ClientId": "e9728b9e-e644-429e-a604-36e44651ef9b",
-    "ClientSecret": "cvT8Q~suEL8V~-Zb8kmWDnYve_jsIxOniUB9lcpn",
-    "CallbackPath": "/signin-oidc"
+    "ClientId": "2197526d-4366-470c-9dc2-d618a76c3ddf",
+    "ClientSecret": "~Tj8Q~mm5DydzqQ1FivgxtkHUbexMXKxvZz7.cfJ",
+    "CallbackPath": "/signin-oidc",
+    "Scopes": "api://b6fa1839-9154-494c-8fe1-1faf65b7b695/user_impersonation"
   },
   "ConnectionStrings": {
     "PollingStationAPI": "http://localhost:5062"
