--- a/PollingStation/PollingStationAPI/Properties/launchSettings.json
+++ b/PollingStation/PollingStationAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7269;http://localhost:5062"
+      "applicationUrl": ";http://localhost:5062"
     },
     "IIS Express": {
       "commandName": "IISExpress",
