add committee members actions

--- a/PollingStation/PollingStationApp/appsettings.json
+++ b/PollingStation/PollingStationApp/appsettings.json
@@ -11,6 +11,14 @@
   "ConnectionStrings": {
     "PollingStationAPI": "http://localhost:5062"
   },
+  "ClientConfigurations": {
+    "PollingStationClient": {
+      "ClientName": "PollingStationClient",
+      "BaseURL": "http://localhost:5062",
+      "KeyHeaderName": "x-api-key",
+      "Key": "my-secure-api-key"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
