--- a/PollingStation/PollingStationApp/Properties/launchSettings.json
+++ b/PollingStation/PollingStationApp/Properties/launchSettings.json
@@ -14,7 +14,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
-        "applicationUrl": "https://localhost:7137;http://localhost:5072",
+        "applicationUrl": "http://localhost:5072",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
