add signalR from electoral register

--- a/PollingStation/PollingStationApp/appsettings.json
+++ b/PollingStation/PollingStationApp/appsettings.json
@@ -22,7 +22,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Identity.Web.TokenAcquisition": "Warning",
+      "Microsoft.IdentityModel": "Warning",
+      "Microsoft.Identity.Client": "Warning"
+
     }
   },
   "AllowedHosts": "*"
