--- a/RegistrulElectoral_API/RegistrulElectoralAPI/appsettings.json
+++ b/RegistrulElectoral_API/RegistrulElectoralAPI/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "CapSolverAPIKey" :  "",
+  "CapSolverAPIKey": "",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PollingStationAPI": "http://localhost:5062"
   },
   "AllowedHosts": "*"
 }
