--- a/PollingStation/PollingStationApp/PollingStationApp.csproj
+++ b/PollingStation/PollingStationApp/PollingStationApp.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\PollingStationAPI.Data\PollingStationAPI.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\assets\" />
+  </ItemGroup>
+
 </Project>
