--- a/Voting/VotingApp/appsettings.json
+++ b/Voting/VotingApp/appsettings.json
@@ -14,9 +14,11 @@
   "ClientConfigurations": {
     "PollingStationClient": {
       "ClientName": "PollingStationClient",
-      "BaseURL": "http://localhost:5062",
-      "KeyHeaderName": "x-api-key",
-      "Key": "my-secure-api-key"
+      "BaseURL": "http://localhost:5062"
+    },
+    "VotingFunction": {
+      "ClientName": "BoothClient",
+      "BaseURL": "http://localhost:7154"
     }
   },
   "Logging": {
