--- a/PollingStation/PollingStationAPI.Service/PollingStationAPI.Service.csproj
+++ b/PollingStation/PollingStationAPI.Service/PollingStationAPI.Service.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
     <PackageReference Include="Google_GenerativeAI" Version="2.7.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.5" />
